--- a/ControlWork9/Views/Shared/_Layout.cshtml
+++ b/ControlWork9/Views/Shared/_Layout.cshtml
@@ -47,6 +47,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark">Ваш баланс: @user.Balance</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark">Ваш номер пополнения: @user.UniqueNumber</a>
+                            </li>
                         }
                         else
                         {
