--- a/ControlWork9/Views/Shared/_Layout.cshtml
+++ b/ControlWork9/Views/Shared/_Layout.cshtml
@@ -42,6 +42,9 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Transaction" asp-action="Index">Транзакции</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link text-dark">@User.Identity.Name</a>
                             </li>
                             <li class="nav-item">
