Добавлена возможность пополнять свой баланс компании или баланс другого пользователя

--- a/ControlWork9/Views/Home/Index.cshtml
+++ b/ControlWork9/Views/Home/Index.cshtml
@@ -53,3 +53,34 @@
         </form>
     </div>
 }
+
+@if (User.Identity.IsAuthenticated)
+{
+    <h2>Пополнить баланс компании</h2>
+    <div class="text-center mb-5">
+        <form asp-action="AddToCompany" method="post" class="col-6 border border-1">
+            <div class="validation" asp-validation-summary="ModelOnly"></div>
+            <div class="mb-3 ms-3 me-3 mt-3">
+                <label for="exampleInputEmail1" class="form-label">Компания</label>
+                <select name="companyId">
+                    <option value=""></option>
+                    @foreach (var c in ViewBag.Companies as List<Company>)
+                    {
+                        <option value="@c.Id">@c.Name</option>
+                    }
+                </select>
+            </div>
+            <div class="mb-3 ms-3 me-3">
+                <label for="exampleInputEmail1" class="form-label">Уникальный номер</label>
+                <input name="number" type="number" class="form-control" id="exampleInputEmail1">
+            </div>
+            <div class="mb-3 ms-3 me-3">
+                <label for="exampleInputEmail1" class="form-label">Сумма перевода</label>
+                <input name="sum" type="number" class="form-control" id="exampleInputEmail1">
+            </div>
+            <div class="mb-3 ms-3 me-3">
+                <button type="submit" class="btn btn-primary">Перевести деньги</button>
+            </div>
+        </form>
+    </div>
+}
