--- a/ControlWork9/Views/Shared/_Layout.cshtml
+++ b/ControlWork9/Views/Shared/_Layout.cshtml
@@ -45,6 +45,12 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Transaction" asp-action="Index">Транзакции</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Пользователи</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Company" asp-action="Index">Компании</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link text-dark">@User.Identity.Name</a>
                             </li>
                             <li class="nav-item">
