--- a/ControlWork9/Views/Company/Details.cshtml
+++ b/ControlWork9/Views/Company/Details.cshtml
@@ -1,17 +1,17 @@
-﻿@model ControlWork9.Models.Company
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer loc
+@model ControlWork9.Models.Company
 
 @{
     ViewData["Title"] = "Details";
 }
-
-<h1>Details</h1>
 
 <div>
     <h4>Company</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            @loc["Name"]
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
@@ -19,7 +19,7 @@
         @if (ViewBag.Balance != null)
         {
             <dt class="col-sm-2">
-                Ваш баланс
+                @loc["Balance"]
             </dt>
             <dd class="col-sm-10">
                 @ViewBag.Balance
