--- a/ControlWork9/Views/Transaction/Index.cshtml
+++ b/ControlWork9/Views/Transaction/Index.cshtml
@@ -1,22 +1,21 @@
-﻿@model List<ControlWork9.Models.Transaction>
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer loc 
+@model List<ControlWork9.Models.Transaction>
 
 @{
     ViewData["Title"] = "Index";
 }
-
-<h1>Index</h1>
-
 
 <table class="table">
     <thead>
         <tr>
             <form asp-action="Index" method="get">
                 <th>
-                    <label for="from">Дата от</label>
+                    <label for="from">@loc["DateFrom"]</label>
                     <input class="form-control" name="from" type="datetime-local"/>
                 </th>
                 <th>
-                    <label for="to">Дата до</label>
+                    <label for="to">@loc["DateTo"]</label>
                     <input class="form-control" name="to" type="datetime-local" />
                 </th>
                 <th>
@@ -28,21 +27,20 @@
     <thead>
         <tr>
             <th>
-                От кого
+                @loc["From"]
             </th>
             <th>
-                К кому
+                @loc["To"]
             </th>
             <th>
-                Компания
+                @loc["Company"]
             </th>
             <th>
-                Время транзакции
+                @loc["Time"]
             </th>
             <th>
-                Сумма
+                @loc["Sum"]
             </th>
-            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -55,7 +53,7 @@
                 }
                 else
                 {
-                    <p>Анонимное пополнение</p>      
+                    <p>@loc["Anonim"]</p>      
                 }
             </td>
             <td>
@@ -76,11 +74,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Sum)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
